cleaned up code comments and console logs

--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@ button {
 
 .alert {
   padding: 20px;
-  background-color: #f44336; /* Red */
+  background-color: #f44336; 
   color: white;
   margin-bottom: 15px;
 }
