--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,6 @@ button {
 .styled-element {
       display: inline-block;
       padding: 10px 20px;
-      background-color: #007bff;
       color: #fff;
       text-decoration: none;
       border: none;
@@ -107,4 +106,8 @@ button {
       font-size: 16px;
       border-radius: 5px; 
       margin: 10px;
+      background-color: #0d6efd;
+  border-color: none;
+  color: white;
+  border-radius: 10px;
     }
