--- a/src/App.css
+++ b/src/App.css
@@ -66,17 +66,17 @@ button {
   background-color: none;
 }
 
-.saveButton {
+/* .saveButton {
   background-color: #0d6efd;
   border-color: none;
   color: white;
   border-radius: 10px;
   margin: auto;
-}
+} */
 
 .alert {
   padding: 20px;
-  background-color: #f44336; 
+  background-color: #f44336;
   color: white;
   margin-bottom: 15px;
 }
@@ -97,17 +97,22 @@ button {
 }
 
 .styled-element {
-      display: inline-block;
-      padding: 10px 20px;
-      color: #fff;
-      text-decoration: none;
-      border: none;
-      cursor: pointer;
-      font-size: 16px;
-      border-radius: 5px; 
-      margin: 10px;
-      background-color: #0d6efd;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #fff;
+  text-decoration: none;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 5px;
+  margin: 10px;
+  background-color: #0d6efd;
   border-color: none;
   color: white;
   border-radius: 10px;
-    }
+}
+.newSignIn {
+  /* font-weight: bold; */
+  /* background-color: #0dcaf0; */
+  /* TODO: make this button different from portfolio and repo buttons */
+}
